k8s/student-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
  namespace: quiz-platform
  labels:
    app: student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-service
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
      - name: student-service
        image: student-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082 # Web port matched to application.yml
        - containerPort: 9090 # gRPC port (if acting as server too)
---
apiVersion: v1
kind: Service
metadata:
  name: student-service
  namespace: quiz-platform
spec:
  selector:
    app: student-service
  ports:
  - port: 8080
    targetPort: 8082
    name: http
